Revert "Implement joker system with GUI controls, inventory management, and usage logic"
This reverts commit 26aed4feac1deae3104bc499ff0fa1d2ad098f5f.

--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -77,7 +77,7 @@ color-timer-running: "§a"
 color-timer-paused: "§c"
 color-timer-not-set: "§e"
 settings-gui-title: "Random Item Battle Settings"
-settings-gui-color: "§6§l"
+settings-gui-color: "§b§l"
 settings-joker-name: "§6Amount of jokers"
 settings-joker-lore: "§7The §6amount§7 of §6jokers§7 a player can use"
 settings-duplicate-name: "§cDuplicate Targets"
