--- a/messages.yml languages/German.yml
+++ b/messages.yml languages/German.yml
@@ -79,7 +79,7 @@ color-timer-running: "§a"
 color-timer-paused: "§c"
 color-timer-not-set: "§e"
 settings-gui-title: "Random Item Battle Einstellungen"
-settings-gui-color: "§6§l"
+settings-gui-color: "§b§l"
 settings-joker-name: "§6Anzahl der Joker"
 settings-joker-lore: "§7Die §6Anzahl§7 der §6Joker§7, die ein Spieler verwenden kann"
 settings-duplicate-name: "§cDoppelte Ziele"
