--- a/messages.yml languages/English.yml
+++ b/messages.yml languages/English.yml
@@ -77,7 +77,7 @@ color-timer-running: "§a"
 color-timer-paused: "§c"
 color-timer-not-set: "§e"
 settings-gui-title: "Random Item Battle Settings"
-settings-gui-color: "§6§l"
+settings-gui-color: "§b§l"
 settings-joker-name: "§6Amount of jokers"
 settings-joker-lore: "§7The §6amount§7 of §6jokers§7 a player can use"
 settings-duplicate-name: "§cDuplicate Targets"
