Softcode joker current count message in messages.yml and language files

--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -80,6 +80,7 @@ settings-gui-title: "Random Item Battle Settings"
 settings-gui-color: "§b§l"
 settings-joker-name: "§6Amount of jokers"
 settings-joker-lore: "§7The §6amount§7 of §6jokers§7 a player can use"
+settings-joker-current: "§eCurrent: %count%"
 settings-duplicate-name: "§cDuplicate Targets"
 settings-duplicate-lore: "§7Targets can occour §cmultiple times§7 in a session"
 settings-joker-gives-item-name: "§bGive item on joker"
