--- a/messages.yml languages/German.yml
+++ b/messages.yml languages/German.yml
@@ -82,6 +82,7 @@ settings-gui-title: "Random Item Battle Einstellungen"
 settings-gui-color: "§b§l"
 settings-joker-name: "§6Anzahl der Joker"
 settings-joker-lore: "§7Die §6Anzahl§7 der §6Joker§7, die ein Spieler verwenden kann"
+settings-joker-current: "§eAktuell: %count%"
 settings-duplicate-name: "§cDoppelte Ziele"
 settings-duplicate-lore: "§7Ziele können §cmehrfach§7 in einer Session vorkommen"
 settings-joker-gives-item-name: "§bItem bei Joker geben"
