Softcode joker item name and lore in messages.yml and language files

--- a/messages.yml languages/German.yml
+++ b/messages.yml languages/German.yml
@@ -87,4 +87,5 @@ settings-duplicate-name: "§cDoppelte Ziele"
 settings-duplicate-lore: "§7Ziele können §cmehrfach§7 in einer Session vorkommen"
 settings-joker-gives-item-name: "§bItem bei Joker geben"
 settings-joker-gives-item-lore: "§7Wenn ein Spieler einen §bJoker§7 verwendet, erhält er auch §bdas Item§7"
-settings-joker-gives-item-lore: "Joker verwenden gibt das Item"
+joker-item-name: "§6Joker"
+joker-item-lore: "§7Das ist ein Joker. Du kannst ihn nicht verwenden oder wegwerfen."
