--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -39,6 +39,8 @@ reset-error-properties: "§cError editing server.properties: %error%"
 reset-warning-1: "§4§lWARNING: §cPlease confirm the reset command!"
 reset-warning-2: "§cThis command clears all §lChallenge Data §r§cand §lgenerates a new world§c!"
 reset-confirm-usage: "§7Use §c/reset confirm§7 to continue."
+reset-initiated: "§aReset initiated. World will be switched and seed renewed..."
+reset-data-cleared: "§cChallenge data has been reset!"
 reset-kick-message: |
   §8————————————————————
 
@@ -86,4 +88,4 @@ settings-duplicate-lore: "§7Targets can occour §cmultiple times§7 in a sessio
 settings-joker-gives-item-name: "§bGive item on joker"
 settings-joker-gives-item-lore: "§7If a player uses a §bjoker§7, they also §breceive§7 the item"
 joker-item-name: "§6Joker"
-joker-item-lore: "§7This is a joker. You cannot use or drop it."
+joker-item-lore: "§7This is a joker. Right-click to skip the current item."
