--- a/messages.yml languages/English.yml
+++ b/messages.yml languages/English.yml
@@ -87,3 +87,4 @@ settings-joker-gives-item-name: "§bGive item on joker"
 settings-joker-gives-item-lore: "§7If a player uses a §bjoker§7, they also §breceive§7 the item"
 joker-item-name: "§6Joker"
 joker-item-lore: "§7This is a joker. Right-click to skip the current item."
+joker-used: "§aJoker used! Skipped to a new item."
