Sync other messages.yml files to match English message structure

--- a/app/src/main/resources/messages.yml
+++ b/app/src/main/resources/messages.yml
@@ -81,8 +81,8 @@ color-timer-not-set: "§e"
 settings-gui-title: "Random Item Battle Settings"
 settings-gui-color: "§b§l"
 settings-joker-name: "§6Amount of jokers"
-settings-joker-lore: "§7The §6global amount§7 of §6jokers§7 players can use"
-settings-joker-current: "§eGlobal: %count%"
+settings-joker-lore: "§7The §6global amount§7 of §6jokers§7 players can use. §cWon't give points when used."
+settings-joker-current: "§eCurrent: %count%"
 settings-duplicate-name: "§cDuplicate Targets"
 settings-duplicate-lore: "§7Targets can occour §cmultiple times§7 in a session"
 settings-joker-gives-item-name: "§bGive item on joker"
