--- a/messages.yml languages/German.yml
+++ b/messages.yml languages/German.yml
@@ -81,8 +81,8 @@ color-timer-not-set: "§e"
 settings-gui-title: "Random Item Battle Einstellungen"
 settings-gui-color: "§b§l"
 settings-joker-name: "§6Anzahl der Joker"
-settings-joker-lore: "§7Die §6Anzahl§7 der §6Joker§7, die ein Spieler verwenden kann"
-settings-joker-current: "§eAktuell: %count%"
+settings-joker-lore: "§7Die §6globale Anzahl§7 an §6Jokern§7, die Spieler verwenden können. §cGibt keine Punkte, wenn verwendet."
+settings-joker-current: "§eGlobal: %count%"
 settings-duplicate-name: "§cDoppelte Ziele"
 settings-duplicate-lore: "§7Ziele können §cmehrfach§7 in einer Session vorkommen"
 settings-joker-gives-item-name: "§bItem bei Joker geben"
