Add joker storage for gamemode changes and error message for insufficient reduction

--- a/messages.yml languages/English.yml
+++ b/messages.yml languages/English.yml
@@ -89,3 +89,4 @@ joker-item-name: "§6Joker"
 joker-item-lore: "§7This is a joker. Right-click to skip the current item."
 joker-used: "§aJoker used! Skipped to a new item."
 joker-timer-not-running: "§cYou can only use jokers when the challenge is running!"
+joker-cannot-reduce: "§cCannot reduce jokers: not all players have enough jokers!"
