--- a/messages.yml languages/German.yml
+++ b/messages.yml languages/German.yml
@@ -91,3 +91,4 @@ joker-item-name: "§6Joker"
 joker-item-lore: "§7Das ist ein Joker. Rechtsklicken um das aktuelle Item zu überspringen."
 joker-used: "§aJoker verwendet! Zu einem neuen Item gesprungen."
 joker-timer-not-running: "§cDu kannst Joker nur verwenden, wenn die Challenge läuft!"
+joker-cannot-reduce: "§cJoker können nicht weiter reduziert werden: nicht alle Spieler haben genug Joker!"
