--- a/messages.yml languages/English.yml
+++ b/messages.yml languages/English.yml
@@ -23,7 +23,7 @@ no-results: "§7No results to display."
 list-item-entry: "§e%player% §r- §a%item%"
 no-assigned-items: "§7No items assigned yet."
 list-points-entry: "§e%player% §r- §a%points% Points"
-no-points: "§7No points recorded yet."
+no-points: "§7No one got points."
 bossbar-item: "Item to find: §e%item%"
 bossbar-paused: "§cTimer paused"
 bossbar-default: "Current Item: -"
