Implement duplicate targets and give item on joker toggles with config defaults

--- a/messages.yml languages/English.yml
+++ b/messages.yml languages/English.yml
@@ -90,3 +90,4 @@ joker-item-lore: "§7This is a joker. Right-click to skip the current item."
 joker-used: "§aJoker used! Skipped to a new item."
 joker-timer-not-running: "§cYou can only use jokers when the challenge is running!"
 joker-cannot-reduce: "§cCannot reduce jokers: not all players have enough jokers!"
+joker-item-received: "§aYou received the item: §e%item%"
