--- a/app/src/main/resources/config.yml
+++ b/app/src/main/resources/config.yml
@@ -4,4 +4,8 @@ allow-movement-without-timer: false
 # Whether to share blacklisted items to the Developer
 share-blacklisted-items-to-developer: true
 # Default number of jokers given to each player
-default-jokers: 0
+default-jokers: 5
+# Whether duplicate targets are allowed (same item can be assigned multiple times)
+allow-duplicate-targets: false
+# Whether using a joker also gives the player the item
+give-item-on-joker: false
