Rename joker-item-received to item-received for generality

--- a/messages.yml languages/German.yml
+++ b/messages.yml languages/German.yml
@@ -19,7 +19,7 @@ assigned-items-title: "§6=== Zugewiesene Items ==="
 player-points-title: "§6==== Spieler Punkte ===="
 leaderboard-title: "§6=== Challenge Ergebnisse ==="
 leaderboard-entry: "#%rank% %player% §r- §a%points% Punkte"
-no-results: "§7Keine Ergebnisse anzuzeigen."
+no-results: "§7Niemand hat Punkte bekommen."
 list-item-entry: "§e%player% §r- §a%item%"
 no-assigned-items: "§7Noch keine Items zugewiesen."
 list-points-entry: "§e%player% §r- §a%points% Punkte"
@@ -92,4 +92,4 @@ joker-item-lore: "§7Das ist ein Joker. Rechtsklicken um das aktuelle Item zu ü
 joker-used: "§aJoker verwendet! Zu einem neuen Item gesprungen."
 joker-timer-not-running: "§cDu kannst Joker nur verwenden, wenn die Challenge läuft!"
 joker-cannot-reduce: "§cJoker können nicht weiter reduziert werden: nicht alle Spieler haben genug Joker!"
-joker-item-received: "§aDu hast das Item erhalten: §e%item%"
+item-received: "§aDu hast das Item erhalten: §e%item%"
