Make enabled/disabled texts softcoded in messages.yml

--- a/messages.yml languages/English.yml
+++ b/messages.yml languages/English.yml
@@ -91,3 +91,5 @@ joker-used: "§aJoker used! Skipped to a new item."
 joker-timer-not-running: "§cYou can only use jokers when the challenge is running!"
 joker-cannot-reduce: "§cCannot reduce jokers: not all players have enough jokers!"
 item-received: "§aYou received the item: §e%item%"
+settings-enabled: "§aEnabled"
+settings-disabled: "§cDisabled"
