--- a/messages.yml languages/German.yml
+++ b/messages.yml languages/German.yml
@@ -93,5 +93,5 @@ joker-used: "§aJoker verwendet! Zu einem neuen Item gesprungen."
 joker-timer-not-running: "§cDu kannst Joker nur verwenden, wenn die Challenge läuft!"
 joker-cannot-reduce: "§cJoker können nicht weiter reduziert werden: nicht alle Spieler haben genug Joker!"
 item-received: "§aDu hast das Item erhalten: §e%item%"
-settings-enabled: "§aAktiviert"
-settings-disabled: "§cDeaktiviert"
+settings-enabled: "§aAktuell aktiviert"
+settings-disabled: "§cAktuell deaktiviert"
