Add permission check to settings

--- a/app/src/main/resources/plugin.yml
+++ b/app/src/main/resources/plugin.yml
@@ -16,3 +16,6 @@ commands:
   reset:
     description: Reset the world
     usage: /<command> <confirm>
+  settings:
+    description: Open the settings GUI
+    usage: /<command>
